# proact

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/: ai_agent_guidelines.md  ai_agent_instructions.md  learnings.md
research/: playwright-research.md  playwright-user-setup.md  playwright.md
src/: cli.rs  generator.rs  main.rs  metadata.rs  templates.rs
tests/: integration_test.rs
