[package]
name = "proact"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright <mike@softwarewrighter.com>"]
description = "CLI that generates documentation for AI coding agents"
license = "MIT"
repository = "https://github.com/softwarewrighter/proact"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
